adding more than one profile to one yml file and using a list to profiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 spring:
   profiles:
-    active: dog, EN, dev
+    active:
+      - dog
+      - EN
+      - dev
 guru:
   username: YmlUsername
   password: YmlPasword
   jdbcurl: YmlUrl
+
+---
+spring:
+  profiles: prod
+guru:
+  username: YmlProdUsername
+  password: YmlProdPasword
+  jdbcurl: YmlProdUrl
